--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../../layouts/Layout.astro';
 import Hero from '../../components/Hero.astro';
 import About from '../../components/About.astro';
+import Projects from '../../components/Projects.astro';
 
 // Provide all valid paths for [lang]
 export async function getStaticPaths() {
@@ -13,4 +14,5 @@ export async function getStaticPaths() {
 <Layout title="Juan Almeida | Software Engineer">
   <Hero />
   <About />
+  <Projects />
 </Layout>
