--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     <meta property="og:image" content="/og-image.jpg" />
     <ViewTransitions />
   </head>
-  <body>
+  <body class="bg-black">
     <main>
       <slot />
     </main>
@@ -36,6 +36,6 @@ const { title } = Astro.props;
   body {
     margin: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
   }
 </style>
