--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,10 @@ const { title } = Astro.props;
 </html>
 
 <style>
+  html {
+    scroll-behavior: smooth;
+  }
+
   html,
   body {
     margin: 0;
