--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
 
 export interface Props {
   title: string;
@@ -24,10 +26,10 @@ const { title } = Astro.props;
     <meta property="og:image" content="/og-image.jpg" />
     <ViewTransitions />
   </head>
-  <body class="bg-black">
-    <main>
-      <slot />
-    </main>
+  <body class="bg-black text-white">
+    <Navbar />
+    <main><slot /></main>
+    <Footer />
   </body>
 </html>
 
