--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,7 @@ const { title } = Astro.props;
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta property="og:title" content="Juan Almeida | Software Engineer" />
