--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -3,6 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import Hero from '../../components/Hero.astro';
 import About from '../../components/About.astro';
 import Projects from '../../components/Projects.astro';
+import Contact from '../../components/Contact.astro';
 
 // Provide all valid paths for [lang]
 export async function getStaticPaths() {
@@ -15,4 +16,5 @@ export async function getStaticPaths() {
   <Hero />
   <About />
   <Projects />
+  <Contact />
 </Layout>
