--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,6 @@
 <section
   id="contact"
-  class="fade-section flex min-h-screen flex-col justify-center bg-black py-16 text-white"
+  class="fade-section flex min-h-[calc(100vh-5rem)] flex-col justify-center bg-black py-16 text-white"
 >
   <div class="container mx-auto max-w-3xl px-6 text-center">
     <!-- Title -->
