--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,11 +3,7 @@ const tabs = ['Skills', 'Experience', 'Interests'];
 const activeTab = 'Skills';
 ---
 
-<section
-  id="about"
-  aria-labelledby="about-title"
-  class="fade-section flex min-h-screen flex-col justify-center bg-black py-16 text-white"
->
+<section id="about" aria-labelledby="about-title" class="fade-section bg-black text-white">
   <div class="container mx-auto px-6">
     <div class="mb-12 flex flex-col gap-3">
       <h2
