--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -2,11 +2,7 @@
 import projects from '../content/projects.json';
 ---
 
-<section
-  id="projects"
-  aria-labelledby="projects-title"
-  class="fade-section flex min-h-screen flex-col justify-center bg-black py-16 text-white"
->
+<section id="projects" aria-labelledby="projects-title" class="fade-section bg-black text-white">
   <div class="container mx-auto px-6">
     <h2
       id="projects-title"
